objects/URL_SFDC2__c.object
<CustomObject>
    <description>SFDC2 new object for research</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>URLs</relationshipLabel>
        <relationshipName>URLs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>URLs</relationshipLabel>
        <relationshipName>URLs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Primary Business</fullName>
                </value>
                <value>
                    <fullName>Other Business</fullName>
                </value>
                <value>
                    <fullName>LinkedIn</fullName>
                </value>
                <value>
                    <fullName>Facebook</fullName>
                </value>
                <value>
                    <fullName>Yelp</fullName>
                </value>
                <value>
                    <fullName>Glassdoor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <label>URL</label>
        <type>Url</type>
    </fields>
    <label>URL</label>
    <nameField>
        <displayFormat>URL-{0000}</displayFormat>
        <label>URL Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>URLs</pluralLabel>
    <recordTypes>
        <fullName>Account_URL</fullName>
        <active>true</active>
        <label>Account URL</label>
    </recordTypes>
    <recordTypes>
        <fullName>Lead_URL</fullName>
        <active>true</active>
        <label>Lead URL</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>